# rancher-project-propagate-labels

./: Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml  rbac.yaml  renovate.json
.github/workflows/: release.yml  test.yml
src/: custom_resources.rs  lib.rs  settings.rs
test_data/: ns_with_labels.json  ns_without_labels.json  session_project_found.yml
