[package]
name = "rancher-project-propagate-labels"
version = "0.1.1"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi-derive = "0.24.0"
k8s-openapi = { version = "0.24.0", features = ["schemars", "v1_32"] }
kubewarden-policy-sdk = "0.11.3"
lazy_static = "1.4"
schemars = { version = "0.8", features = ["impl_json_schema"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"

[dev-dependencies]
mockall = "0.13"
serial_test = "3.1"
rstest = "0.24"
